tests/error/type_match/base_case_rvalue_to_lvalue_ref4.bz
// error: unable to match temporary value of type 'int32' to a reference type '&auto'
function test()
{
	let _: &auto = 0;
}
